# 52archive

./: .gitignore  DEPLOYMENT.md  HANDOFF.yaml  README.md  SKILL.md  docker-compose.yml  graph_definition.yaml  judgement_game.yaml  package-lock.json  package.json  tsconfig.base.json
apps/mobile/: App.tsx  SKILL.md  package.json  tsconfig.json
apps/server/: SKILL.md  package.json
apps/server/src/: index.ts
apps/server/src/lib/: socket.ts
apps/server/src/routes/: game.ts  games.ts  lock.ts
apps/web/: SKILL.md  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/.next/: app-build-manifest.json  prerender-manifest.json  trace
apps/web/.next/cache/: .rscinfo
apps/web/.next/server/: server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: page.js  page_client-reference-manifest.js
apps/web/.next/server/vendor-chunks/: @swc.js
apps/web/.next/types/: routes.d.ts  validator.ts
apps/web/app/: layout.tsx  not-found.tsx  page.tsx
apps/web/app/add/: page.tsx
apps/web/app/components/: cozy-rule-node.tsx  graph-editor.tsx
apps/web/app/editor/: page.tsx
apps/web/app/games/: page.tsx
apps/web/app/judgement/: page.tsx
assets/figma/classic-playing-cards/extracted/: canvas.fig  meta.json
db/: SKILL.md
db/init/: 0001_initial.sql  001_schema.sql  002_locking.sql  003_nullable_max_players.sql
training_env/: README.md  SKILL.md  attach_model_direct.py  cli_preview.py  debug_game.py  env.py  game_session.py  grid_search.py  gym_env.py  heuristics.py  models.py  oh_hell.yaml  pyproject.toml  requirements.txt  simulation_api.py  simulation_server.py  tournament.py  train.py  train_sb3_maskable.py  upload_model.py
training_env/tests/: conftest.py  test_default_config.py  test_integrated.py  test_passing.py  test_rewards.py  test_scoring.py  test_simulation_complete.py
(+13 files in other folders)
