[project]
name = "training-env"
version = "1.0.0"
description = "Trick-Taking Game RL Agent Training Simulator"
dependencies = [
    "torch>=2.5.0",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "pyyaml",
    "numpy"
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
