[project]
name = "training-env"
version = "1.0.0"
description = "Trick-Taking Game RL Agent Training Simulator"
dependencies = [
    "torch==2.6.0+xpu; sys_platform == 'win32'",
    "torch>=2.5.0; sys_platform != 'win32'",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "pyyaml",
    "numpy",
    "pymongo"
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
]
